[gd_scene load_steps=2 format=3 uid="uid://ct4m2p8r3ufw8"]

[ext_resource type="Script" path="res://scripts/editors/CustomCommandConfigDialog.gd" id="1_custom"]

[node name="CustomCommandConfigDialog" type="Window"]
auto_translate_mode = 1
oversampling_override = 1.0
title = "Custom Command"
position = Vector2i(325, 37)
size = Vector2i(500, 450)
script = ExtResource("1_custom")

[node name="Root" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Root"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBox" type="VBoxContainer" parent="Root/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="KeywordLabel" type="Label" parent="Root/ScrollContainer/VBox"]
layout_mode = 2
text = "Keyword / Phrase"
tooltip_text = "The voice command keyword to match (e.g., \"fire mission\"). Case-insensitive."

[node name="Keyword" type="LineEdit" parent="Root/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "fire mission"

[node name="HintLabel" type="Label" parent="Root/ScrollContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11
text = "This phrase will be matched when heard over the radio."
autowrap_mode = 3

[node name="HSeparator1" type="HSeparator" parent="Root/ScrollContainer/VBox"]
layout_mode = 2

[node name="TriggerIDLabel" type="Label" parent="Root/ScrollContainer/VBox"]
layout_mode = 2
text = "Trigger ID (Optional)"
tooltip_text = "Trigger to auto-activate when this command is heard. Leave empty to handle manually."

[node name="TriggerID" type="LineEdit" parent="Root/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "fire_mission_trigger"

[node name="RouteAsOrder" type="CheckBox" parent="Root/ScrollContainer/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Route as CUSTOM order"
tooltip_text = "If checked, generates a CUSTOM order that routes through OrdersRouter for advanced handling."

[node name="HSeparator2" type="HSeparator" parent="Root/ScrollContainer/VBox"]
layout_mode = 2

[node name="GrammarLabel" type="Label" parent="Root/ScrollContainer/VBox"]
layout_mode = 2
text = "Additional Grammar (one per line)"
tooltip_text = "Extra words to add to STT recognition for better accuracy."

[node name="Grammar" type="TextEdit" parent="Root/ScrollContainer/VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3
placeholder_text = "danger
close
grid
coordinates"
wrap_mode = 1

[node name="GrammarHintLabel" type="Label" parent="Root/ScrollContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 11
text = "Include related terms that might be said with this command."
autowrap_mode = 3

[node name="ButtonRow" type="HBoxContainer" parent="Root"]
layout_mode = 2

[node name="Save" type="Button" parent="Root/ButtonRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Save"

[node name="Close" type="Button" parent="Root/ButtonRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Close"
